--- a/index.html
+++ b/index.html
@@ -3,14 +3,92 @@
 <head>
   <meta charset="UTF-8" />
   <title>Google Sheets Data Viewer</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background-color: #f7f9fb;
+      color: #333;
+    }
+
+    h2 {
+      text-align: center;
+      color: #2c3e50;
+    }
+
+    #table-container {
+      overflow: auto;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    table {
+      border-collapse: collapse;
+      min-width: 800px;
+      width: max-content;
+      background: white;
+    }
+
+    th, td {
+      padding: 12px 16px;
+      border-bottom: 1px solid #eaeaea;
+      border-right: 1px solid #e0e0e0;
+      text-align: center;
+      white-space: nowrap;
+    }
+
+    th:last-child,
+    td:last-child {
+      border-right: none;
+    }
+
+    th {
+      background-color: #2c3e50;
+      color: white;
+      font-weight: 600;
+      position: sticky;
+      top: 0;
+      z-index: 2;
+    }
+
+    /* Sticky 行号 */
+    th:first-child,
+    td:first-child {
+      position: sticky;
+      left: 0;
+      background: #f4f4f4;
+      font-weight: bold;
+      z-index: 1;
+    }
+
+    tr:hover {
+      background-color: #f1f1f1;
+    }
+
+    img {
+      max-width: 100px;
+      max-height: 100px;
+      border-radius: 6px;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    #output {
+      text-align: center;
+      font-size: 18px;
+    }
+  </style>
 </head>
 <body>
-  <h2>Google Sheets 实时数据</h2>
-  <div id="output">Loading...</div>
+  <div id="table-container"><div id="output">Loading...</div></div>
 
   <script>
     const sheetID = '1wyxggYVyxiv25G2aB8XW3yTUt5UvfU2HKeReny_1mUE';
-    const sheetName = 'Sheet1'; // 请替换为你的实际工作表名
+    const sheetName = 'Sheet1';
     const query = encodeURIComponent('SELECT *');
     const url = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?sheet=${sheetName}&tq=${query}`;
 
@@ -20,34 +98,38 @@
         const json = JSON.parse(rep.match(/google\.visualization\.Query\.setResponse\((.*)\);/)[1]);
         const table = json.table;
 
-       // 从 table.rows[0] 读取标题行，覆盖 table.cols.label
         const titleRow = table.rows[0].c.map(cell => cell?.v ?? '');
-
-        // 判断 image 列
         const isImageColumn = titleRow.map(title => title.toLowerCase().startsWith('image'));
+        const isFromColumn = titleRow.map(title => title.toLowerCase().startsWith('from'));
 
-        // 渲染表头
-        let html = '<table border="1" cellspacing="0" cellpadding="5"><tr>';
+        let html = '<table><tr>';
+        html += '<th>#</th>';
         titleRow.forEach(title => {
           html += `<th>${title}</th>`;
         });
         html += '</tr>';
 
-        // 渲染数据，从第2行开始（跳过我们刚当作标题的 row）
         for (let i = 1; i < table.rows.length; i++) {
           const row = table.rows[i];
           html += '<tr>';
+          html += `<td>${i}</td>`;
           row.c.forEach((cell, colIndex) => {
             const value = cell?.v ?? '';
             if (isImageColumn[colIndex]) {
-              html += value ? `<td><img src="${value}" alt="image" style="max-width:100px; max-height:100px;" /></td>` : '<td></td>';
-            } else {
+              html += value
+                ? `<td><img src="${value}" alt="image" /></td>`
+                : '<td></td>';
+            } else if (isFromColumn[colIndex]) {
+              html += value
+                ? `<td><a href="${value}" target=”_blank“>Source</a></td>`
+                : '<td></td>';
+            } 
+            else {
               html += `<td>${value}</td>`;
             }
           });
           html += '</tr>';
         }
-
 
         html += '</table>';
         document.getElementById('output').innerHTML = html;
