--- a/index.html
+++ b/index.html
@@ -23,15 +23,10 @@
       color: #333;
     }
 
-    h2 {
-      text-align: center;
-      color: #2c3e50;
-    }
-
     #table-container {
       overflow: auto;
       width: 100vw;
-      height: 100vh;
+      height: calc(100vh - 60px);
     }
 
     table {
@@ -63,7 +58,6 @@
       z-index: 2;
     }
 
-    /* Sticky 行号 */
     th:first-child,
     td:first-child {
       position: sticky;
@@ -84,20 +78,106 @@
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
     }
 
-    #output {
+    #pagination {
       text-align: center;
-      font-size: 18px;
+      padding: 10px;
+      background: #fff;
+      position: sticky;
+      bottom: 0;
+    }
+
+    #pagination button {
+      margin: 0 4px;
+      padding: 6px 12px;
+      background: #2c3e50;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    #pagination button.active {
+      background: #3498db;
+    }
+
+    #pagination button:disabled {
+      background: #ccc;
+      cursor: not-allowed;
     }
   </style>
 </head>
 <body>
   <div id="table-container"><div id="output">Loading...</div></div>
+  <div id="pagination"></div>
 
   <script>
     const sheetID = '1wyxggYVyxiv25G2aB8XW3yTUt5UvfU2HKeReny_1mUE';
     const sheetName = 'Sheet1';
     const query = encodeURIComponent('SELECT *');
     const url = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?sheet=${sheetName}&tq=${query}`;
+    const pageSize = 100;
+
+    let rows = [];
+    let titleRow = [];
+    let isImageColumn = [];
+    let isFromColumn = [];
+
+    function renderTable(page) {
+      const start = (page - 1) * pageSize;
+      const end = start + pageSize;
+      const pageRows = rows.slice(start, end);
+
+      let html = '<table><tr>';
+      html += '<th>#</th>';
+      titleRow.forEach((title, index) => {
+        const isNameColumn = title.toLowerCase() === 'name';
+        html += `<th${isNameColumn ? ' class="name-column"' : ''}>${title}</th>`;
+      });
+      html += '</tr>';
+
+      for (let i = 0; i < pageRows.length; i++) {
+        const row = pageRows[i];
+        html += '<tr>';
+        html += `<td>${start + i + 1}</td>`;
+        row.c.forEach((cell, colIndex) => {
+          const value = cell?.v ?? '';
+          const isNameColumn = titleRow[colIndex].toLowerCase() === 'name';
+
+          if (isImageColumn[colIndex]) {
+            html += value
+              ? `<td><img src="${value}" alt="image" /></td>`
+              : '<td></td>';
+          } else if (isFromColumn[colIndex]) {
+            html += value
+              ? `<td><a href="${value}" target="_blank">Source</a></td>`
+              : '<td></td>';
+          } else {
+            html += `<td${isNameColumn ? ' class="name-column"' : ''}>${value}</td>`;
+          }
+        });
+        html += '</tr>';
+      }
+
+      html += '</table>';
+      document.getElementById('output').innerHTML = html;
+    }
+
+    function renderPagination(totalPages, currentPage) {
+      const pagination = document.getElementById('pagination');
+      let html = '';
+
+      for (let i = 1; i <= totalPages; i++) {
+        html += `<button ${i === currentPage ? 'class="active"' : ''} onclick="changePage(${i})">${i}</button>`;
+      }
+
+      pagination.innerHTML = html;
+    }
+
+    function changePage(page) {
+      localStorage.setItem('currentPage', page);
+      renderTable(page);
+      renderPagination(Math.ceil(rows.length / pageSize), page);
+    }
 
     fetch(url)
       .then(res => res.text())
@@ -105,43 +185,15 @@
         const json = JSON.parse(rep.match(/google\.visualization\.Query\.setResponse\((.*)\);/)[1]);
         const table = json.table;
 
-        const titleRow = table.rows[0].c.map(cell => cell?.v ?? '');
-        const isImageColumn = titleRow.map(title => title.toLowerCase().startsWith('image'));
-        const isFromColumn = titleRow.map(title => title.toLowerCase().startsWith('from'));
+        titleRow = table.rows[0].c.map(cell => cell?.v ?? '');
+        isImageColumn = titleRow.map(title => title.toLowerCase().startsWith('image'));
+        isFromColumn = titleRow.map(title => title.toLowerCase().startsWith('from'));
 
-        let html = '<table><tr>';
-        html += '<th>#</th>';
-        titleRow.forEach((title, index) => {
-          const isNameColumn = title.toLowerCase() === 'name';
-          html += `<th${isNameColumn ? ' class="name-column"' : ''}>${title}</th>`;
-        });
-        html += '</tr>';
+        rows = table.rows.slice(1); // 去掉标题行
 
-        for (let i = 1; i < table.rows.length; i++) {
-          const row = table.rows[i];
-          html += '<tr>';
-          html += `<td>${i}</td>`;
-          row.c.forEach((cell, colIndex) => {
-            const value = cell?.v ?? '';
-            const isNameColumn = titleRow[colIndex].toLowerCase() === 'name';
-
-            if (isImageColumn[colIndex]) {
-              html += value
-                ? `<td><img src="${value}" alt="image" /></td>`
-                : '<td></td>';
-            } else if (isFromColumn[colIndex]) {
-              html += value
-                ? `<td><a href="${value}" target="_blank">Source</a></td>`
-                : '<td></td>';
-            } else {
-              html += `<td${isNameColumn ? ' class="name-column"' : ''}>${value}</td>`;
-            }
-          });
-          html += '</tr>';
-        }
-
-        html += '</table>';
-        document.getElementById('output').innerHTML = html;
+        const savedPage = parseInt(localStorage.getItem('currentPage'), 10);
+        const initialPage = !isNaN(savedPage) && savedPage > 0 ? savedPage : 1;
+        changePage(initialPage);
       })
       .catch(err => {
         document.getElementById('output').innerText = '加载失败：' + err;
