--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </div>
 
   <script>
-    const sheetID = '1wyxggYVyxiv25G2aB8XW3yTUt5UvfU2HKeReny_1mUE';
+    const sheetID = '1kxOQXex_hv-52f65-EoLvutHmhb8QzvjO6uEra5UeOo';
     const sheetName = 'Sheet1';
     const query = encodeURIComponent('SELECT *');
     const url = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?sheet=${sheetName}&tq=${query}`;
@@ -225,11 +225,17 @@
         const json = JSON.parse(rep.match(/google\.visualization\.Query\.setResponse\((.*)\);/)[1]);
         const table = json.table;
 
-        titleRow = table.rows[0].c.map(cell => cell?.v ?? '');
+        const hasHeader = table.cols.filter(col => col.label).length
+        if(hasHeader){
+          titleRow = table.cols.map(col => col.label);
+        }else {
+          titleRow = table.rows[0].c.map(cell => cell?.v ?? '');
+        }
+
         isImageColumn = titleRow.map(title => title.toLowerCase().startsWith('image'));
         isFromColumn = titleRow.map(title => title.toLowerCase().startsWith('from'));
 
-        rows = table.rows.slice(1); // 去掉标题行
+        rows = hasHeader ? table.rows : table.rows.slice(1); // 去掉标题行
 
         const savedPage = parseInt(localStorage.getItem('currentPage'), 10);
         const initialPage = !isNaN(savedPage) && savedPage > 0 ? savedPage : 1;
